--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
   <title>Document</title>
 </head>
 
@@ -24,6 +25,7 @@
       <p class="header-text">SCROLL DOWN</p>
     </div>
   </header>
+  <!--
   <section class="navbar">
     <div class="container">
       <nav class="menu">
@@ -218,7 +220,7 @@
           </copyright>
     </div>
   </section>
-  
+  -->
 </body>
 
 </html>
