--- a/index.html
+++ b/index.html
@@ -25,13 +25,22 @@
       <p class="header-text">SCROLL DOWN</p>
     </div>
   </header>
-  <!--
+
   <section class="navbar">
     <div class="container">
       <nav class="menu">
         <a class="menu__logo" href="">
           <img src="img/projeco-logo-black.svg" alt="">
         </a>
+        <button class="menu__btn">
+          <?xml version="1.0" encoding="UTF-8"?>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="18" viewBox="0 0 30 18" fill="none">
+            <path d="M0 0H30V2H0V0Z" fill="black"></path>
+            <path d="M0 8H30V10H0V8Z" fill="black"></path>
+            <rect y="16" width="30" height="2" fill="black"></rect>
+          </svg>
+
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item">
             <a href="" class="menu__list-item--link">HOME</a>
@@ -52,6 +61,7 @@
       </nav>
     </div>
   </section>
+    <!--
   <section class="about">
     <div class="container">
       <h2 class="about-title">OUR STORY</h2>
@@ -221,6 +231,8 @@
     </div>
   </section>
   -->
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
